styles/style.css
/* -----Navbar---- */


/* Logo */

img.duck-logo {
    width:55px;
}

/* Navbar text color */

input.form-control {
    --bs-text-opacity: black
}

.navbar-toggler {
    border-color: #FFFFFF;
}

.navbar-nav {
    --bs-navbar-active-color:white;
    --bs-nav-link-color: #909294;
    --bs-nav-link-hover-color: white;
    --bs-nav-link-disabled-color: #909294;
}

/* Catalogo Libri */

.btn-add { 
    border:none;
}

/* Table */

table th:first-child {
    display:none; 
}

 th:nth-child(3), tab {
    display:none;
}

@media screen and (min-width:768px) {
     th:nth-child(3),td:nth-of-type(3) {
    display:table-cell;
}
}

/* Label */

.label {
    padding:4px
}

